--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^3.3.7",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.9.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
